# rpctest

./: .gitignore  CMakeLists.txt  README.md  square_clnt_main.c  square_proc_1_svc.c
